Fix wrapping action links on summary list component
Overwrite `govuk-summary-list__actions` from 20% to 25% to accommodate Change and Delete actions without wrapping.

--- a/app/assets/stylesheets/utilities/_overrides.scss
+++ b/app/assets/stylesheets/utilities/_overrides.scss
@@ -98,7 +98,11 @@
   }
 
   .govuk-summary-list__value {
-    width: 70%;
+    width: 65%;
+  }
+
+  .govuk-summary-list__actions {
+    width: 25%;
   }
 }
 // scss-lint:enable IdSelector
